<resources>
    <string name="app_name">SalesTrack</string>
    <string name="welcome_message">
    We are delighted to have you as part of our exclusive retail community. To get started, you have two options:

    Existing Users: If you already have an account, simply use the button below to log in and explore our latest collections.

    New Users: If you are new here, please contact our admin to create your account and enjoy a personalized shopping experience. Just drop a message, and we will take care of the rest.

    Let us make your retail journey extraordinary!
</string>
    <string name="button_to_take_you_back">button to take you back</string>
    <string name="back">back</string>
    <string name="button_for_search">button for search</string>
    <string name="button_for_more_items">button for more items</string>
    <string name="more">more</string>
    <string name="search">search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="reports">Reports</string>
    <string name="category_name">Category Name</string>
    <string name="add_description">Add Description</string>
    <string name="button_for_adding_categories">button for adding categories</string>
    <string name="product_description">Product Description</string>
    <string name="product_name">Product Name</string>
    <string name="selling_price">Selling Price</string>
    <string name="select_a_category">Select a category</string>
    <string name="barcode_scan">Barcode Scan</string>
    <string name="total_ugx_0_00">Total: Ugx 0.00</string>
    <string name="add_sale_item_button">add sale item button</string>
    <string name="save_sale_details_button">save sale details button</string>
    <string name="expenses">Expenses</string>
    <string name="stock">Stock</string>
    <string name="add_purchases_icon">add purchases icon</string>
    <string name="add_purchases">Add Purchases</string>
    <string name="add_stock_items">Add stock items</string>
    <string name="add_stock_items_description">add stock items description</string>
    <string name="modify_stock">Modify Stock</string>
    <string name="edit_stock_items">Edit Stock items</string>
    <string name="modify_stock_icon">modify stock icon</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="paid_to">Paid To</string>
    <string name="amount">Amount</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="select_expense_account">Select Expense Account</string>
    <string name="payment_description">Payment Description</string>
    <string name="account">Account</string>
    <string name="payment_details">Payment Details</string>
    <string name="_13_00_00">13:00:00</string>
    <string name="time">Time:</string>
    <string name="_20">20</string>
    <string name="accounts">Accounts</string>
    <string name="balance_sheet_icon">balance sheet icon</string>
    <string name="balance_sheet">Balance Sheet</string>
    <string name="stock_report_icon">Stock report icon</string>
    <string name="sales_report">Sales Report</string>
    <string name="cash_flow_statement_icon">cash flow statement icon</string>
    <string name="from_yyyy_mm_dd">From: yyyy-MM-dd</string>
    <string name="from_date">From Date</string>
    <string name="total_count">Total Count</string>
    <string name="total_sales_amount">Total Sales Amount:</string>
    <string name="sale_date">Sale Date:</string>
    <string name="product">Product:</string>
    <string name="select_from_date">Select From Date</string>
    <string name="select_to_date">Select To Date</string>
    <string name="welcome_to_erp_mobile_app_n_please_create_an_account_to_use_our_services">We\'re thrilled to have you on board! Whether you\'re a seasoned sales pro or just starting out, our app is designed to supercharge your sales journey. By creating an account, you\'ll gain access to a world of features and tools that will help you boost your sales, streamline your processes, and achieve your goals</string>
    <string name="log_out">Log out</string>
    <string name="email">Email:</string>
    <string name="allow_negative_stock_sales">Allow Negative Stock Sales</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="warn_stock_on">Warn Minimum Stock </string>
    <string name="minimum_stock">Minimum Stock:</string>
    <string name="enter_minimum_stock_level">Enter minimum stock level</string>
    <string name="_5">5</string>
    <string name="price">Price</string>


</resources>