<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="Profile"/>
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>
    <item
        android:id="@+id/category"
        android:enabled="true"
        android:icon="@drawable/ic_category"
        android:title="@string/category"/>
    <item
        android:id="@+id/analytics"
        android:enabled="true"
        android:icon="@drawable/ic_analytics"
        android:title="@string/reports"/>
    <item
        android:id="@+id/product"
        android:enabled="true"
        android:icon="@drawable/ic_product"
        android:title="Products"/>
    <item
        android:id="@+id/drawer_logout"
        android:enabled="true"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/log_out"/>


</menu>