<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Top app bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:menu="@menu/top_app_bar"
            app:navigationIcon="@drawable/back"
            app:title="Sales Report "
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topbarLayout"
        android:id="@+id/buttonLayout"
        android:layout_margin="16dp"
        android:orientation="horizontal">
        <!-- From Date Button -->
        <Button
            android:id="@+id/fromDateButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/select_from_date" />

        <!-- To Date Button -->
        <Button
            android:id="@+id/toDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_to_date" />
    </LinearLayout>


    <!-- RecyclerView to display sales data -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/salesRecyclerView"
        android:layout_width="374dp"
        android:layout_height="524dp"
        android:layout_below="@id/buttonLayout"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/totalSalesCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:layout_margin="10dp"
        android:textStyle="italic|bold"
        android:text="@string/total_count" />

    <TextView
        android:id="@+id/totalSalesAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:layout_margin="10dp"
        android:textStyle="bold|italic"
        android:text="@string/total_sales_amount" />
</RelativeLayout>
