<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <!-- Top app bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="@drawable/back"
            app:title="Settings"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="573dp"
        android:layout_below="@id/topbarLayout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">
        <!-- Option 1: Allow Negative Stock Sales -->
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/allowNegativeStockSalesSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:text="@string/allow_negative_stock_sales" />

        <!-- Option 2: Warn Stock -->
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/warnStockOnSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:text="@string/warn_stock_on" />
        <!-- Option 5: Minimum Stock -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:text="@string/minimum_stock" />

            <EditText
                android:id="@+id/minimumStockEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:hint="@string/_5"
                android:importantForAccessibility="yes"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:inputType="number"
                android:maxLength="3" />
        </LinearLayout>


        <!-- Option 3: Dark Mode -->
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/darkModeSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"

            android:text="@string/dark_mode" />

        <!-- Option 4: Test Network -->
        <Button
            android:id="@+id/testNetworkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Test Network" />
    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_alignParentBottom="true"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_navigation_menu" />
</RelativeLayout>
