<?xml version="1.0" encoding="utf-8"?><!-- activity_sales.xml -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stock.StockActivity">
    <!-- Top app bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:menu="@menu/top_app_bar"
            app:navigationIcon="@drawable/back"
            app:title="Add/Modify Stock"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="321dp"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/add_stock_card"
            android:layout_width="164dp"
            android:layout_height="233dp"
            android:layout_margin="8dp"
            android:backgroundTint="@color/white"
            app:cardElevation="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Media -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:contentDescription="@string/add_purchases_icon"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/add_stock" />

                <!-- Buttons -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_purchases"
                        android:textAppearance="?attr/textAppearanceBody1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/add_stock_items"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="purchases" />


                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/modify_stock_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            android:backgroundTint="@color/white"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="168dp"
                android:layout_height="233dp"
                android:orientation="vertical">

                <!-- Media -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:contentDescription="@string/modify_stock_icon"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/modify_stock" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/modify_stock"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/edit_stock_items"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary" />


                </LinearLayout>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:layout_alignParentBottom="true"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_navigation_menu" />

</RelativeLayout>
